--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
         <div class="titulo">
           <h1>Revelando o segredo para uma pele radiante</h1>
         </div>
+        <div class="imagemPrincipal">
+        <img src="" alt="">
+        </div>
       </section>
       <section class="banner2">
         <div class="imagem-exemplo">
