fazer o footer amanhã

--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
   <!-- Links para Stylesheets e Scripts -->
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" defer></script>
+
+  <!-- Font segundaria da página -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -76,8 +81,8 @@
         <div class="titulo">
           <h1>Revelando o segredo para uma pele radiante</h1>
         </div>
-        <div class="imagemPrincipal">
-        <img src="" alt="">
+        <div class="imagemTitulo">
+        <img src="./img/BannerQuatroHeader.jpg" alt="">
         </div>
       </section>
       <section class="banner2">
