--- a/index.html
+++ b/index.html
@@ -87,11 +87,13 @@
       </section>
       <section class="banner2">
         <div class="imagem-exemplo">
-          <div>
-
-          </div>
-          <div>
-
+          <div class="div-imagens">
+            <div class="imagem-exemplo2">
+              <img src="./img/bannerTresHeader.jpg" alt="" width="100px">
+            </div>
+            <div class="imagem-exemplo3">
+              <img src="./img/bannerDoisDoHeader.jpg" alt="" width="100px">
+            </div>
           </div>
           <p></p>
           <p></p>
