--- a/index.html
+++ b/index.html
@@ -77,22 +77,33 @@
     </header>
 
     <main class="conteinerMain">
+
       <section class="bannerPrincipal">
+
         <div class="titulo">
           <h1>Revelando o segredo para uma pele radiante</h1>
         </div>
+
         <div class="imagemTitulo">
         <img src="./img/BannerQuatroHeader.jpg" alt="">
         </div>
+
       </section>
+
       <section class="banner2">
+
         <div class="imagem-exemplo">
+
           <div class="div-imagens">
+
             <div class="imagem-exemplo2">
               <img src="./img/bannerTresHeader.jpg" alt="" width="100px">
             </div>
+
             <div class="imagem-exemplo3">
+
               <img src="./img/bannerDoisDoHeader.jpg" alt="" width="100px">
+
             </div>
           </div>
           <p></p>
@@ -103,5 +114,42 @@
       </section>
       <section class="efeito"></section>
     </main>
+
+
+    <footer>
+      <div class="logoFooter"> Logo</div>
+      <div class="secaoLinks">
+        <div class="secaoPrimeira">
+          <ul> 
+            <li> lorem ipusem</li>
+            <li> lorem ipusem</li>
+            <li> lorem ipusem</li>
+          </ul>
+        </div>
+        <div class="secaoPags">
+          <ul>
+            <li> lorem ipusem</li>
+            <li> lorem ipusem</li>
+            <li> lorem ipusem</li>
+          </ul>
+        </div>
+        <div class="secaoFaqs">
+          <ul>
+            <li> lorem ipusem</li>
+            <li> lorem ipusem</li>
+          </ul>
+        </div>
+        <div class="vamosConversar">
+          <p> lorem ipusem</p>
+          <h3> Vamos conversar</h3>
+        </div>
+      </div>
+  
+      <hr>
+      <section class="fimDoFooter">
+        <div></div>
+        <div></div>
+      </section>
+    </footer>
 </body>
 </html>
